infrastructure/base/network/network-policies/cert-manager/allow-ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-webhook
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: webhook
  policyTypes:
    - Ingress
  ingress:
    # Kubernetes API server admission webhooks (via cert-manager-webhook-service).
    - from:
        - ipBlock:
            cidr: 192.168.10.245/32
        - ipBlock:
            cidr: 192.168.10.41/32
        - ipBlock:
            cidr: 192.168.10.42/32
        - ipBlock:
            cidr: 192.168.10.43/32
      ports:
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 443
